gcc/testsuite/rust/rustc/ui/issues/issue-75283.rs
extern "C" {
    fn lol() { // { dg-error "" "" { target *-*-* } }
        println!("");
    }
}
fn main() {}

